[package]
name = "betadin"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["aidin53"]
description = "A simple programing language for research purposes"

[dependencies]
lalrpop-util = { version = "0.20.0", features = ["lexer", "unicode"] }
sys-info = "0.9"

[build-dependencies]
lalrpop = "0.20.0"
